[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/items/item_node/item_task_icon.gd" type="Script" id=1]
[ext_resource path="res://game/tasks/ui_elements/sprites/task_pick_up_arrow.png" type="Texture" id=2]

[node name="ItemTaskIcon" type="Node2D"]
script = ExtResource( 1 )

[node name="ItemSprite" type="Sprite" parent="."]

[node name="InteractButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 49.0
margin_bottom = 75.0
texture_hover = ExtResource( 2 )

[connection signal="pressed" from="InteractButton" to="." method="_on_InteractButton_pressed"]
